--- a/.github/workflows/liger_kernel.yml
+++ b/.github/workflows/liger_kernel.yml
@@ -73,6 +73,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v6
 
+    - name: Checkout Liger-Kernel
+      uses: actions/checkout@v6
+      with:
+          repository: linkedin/Liger-Kernel
+          path: Liger-Kernel
+
     - name: Set up Python
       shell: bash
       run: |
