--- a/.github/workflows/liger_kernel.yml
+++ b/.github/workflows/liger_kernel.yml
@@ -58,9 +58,22 @@ jobs:
       run: make checkstyle
 
   tests:
+    name: Tests (${{ matrix.name }})
     runs-on: ${{ github.event.inputs.runner || 'linux-arm64-npu-1' }}
     needs: [checkstyle]
     if: success()
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - name: transformers
+            command: python -m pytest --disable-warnings \
+                      --cov=src/liger_kernel \
+                      --cov-report=term-missing \
+                      --ignore=test/convergence \
+                      test/transformers
+          - name: full
+            command: make test
     container:
       image: swr.cn-southwest-2.myhuaweicloud.com/base_image/ascend-ci/cann:8.3.rc1-910b-ubuntu22.04-py3.11
       options: >-
@@ -90,7 +103,7 @@ jobs:
       run: |
         npu-smi info
         echo "NPU devices available"
-    
+
     - name: Install torch_npu and triton-ascend
       shell: bash
       run: |
@@ -99,13 +112,6 @@ jobs:
         pip install triton-ascend
         python3 -c "import torch; import torch_npu; print(torch_npu.npu.is_available())"
         python -c "import torch_npu; print('torch_npu version:', torch_npu.__version__)"
-
-        python - <<'PY'
-        import triton
-        print("triton version:", triton.__version__)
-        print("has autotune:", hasattr(triton, "autotune"))
-        PY
-
 
     - name: Setup Dependencies
       working-directory: Liger-Kernel
@@ -123,8 +129,4 @@ jobs:
       shell: bash
       run: |
         # Run tests only after checkstyle passes
-        # Initial phase: Run only test cases in test/transformers directory
-        python -m pytest test/transformers/ --disable-warnings
-        # Future phases will expand to full test suite:
-        # make test
-        # make test-convergence
+        ${{ matrix.command }}
