--- a/.github/workflows/liger_kernel.yml
+++ b/.github/workflows/liger_kernel.yml
@@ -24,6 +24,8 @@ on:
           - linux-arm64-npu-4
         default: "linux-arm64-npu-1"
         description: "The runner selected to run on"
+schedule:
+  - cron: "0 12 * * 0"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
