--- a/.github/workflows/liger_kernel.yml
+++ b/.github/workflows/liger_kernel.yml
@@ -54,6 +54,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install uv
+        uv venv
         uv pip install -r dev/fmt-requirements.txt
 
     - name: Run checkstyle
@@ -113,6 +114,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install uv
+        uv venv
 
         uv pip install attrs==24.2.0 numpy==1.26.4 scipy==1.13.1 decorator==5.1.1 psutil==6.0.0 pytest==9.0.2 pytest-xdist==3.6.1 pyyaml pybind11
         uv pip install torch_npu==2.6.0
