--- a/.github/workflows/liger_kernel.yml
+++ b/.github/workflows/liger_kernel.yml
@@ -103,13 +103,14 @@ jobs:
         # Python should be pre-installed in the container image
         python --version
 
+    - name: Verify NPU availability
+      shell: bash
+      run: |
+        npu-smi info
+        echo "NPU devices available"
+
     - name: Setup uv
       uses: astral-sh/setup-uv@v7
-
-    - name: Create venv
-      run: |
-        uv venv .venv
-        echo "$PWD/.venv/bin" >> $GITHUB_PATH
 
     - name: Install torch_npu and triton-ascend
       shell: bash
