--- a/.github/workflows/liger_kernel.yml
+++ b/.github/workflows/liger_kernel.yml
@@ -51,11 +51,8 @@ jobs:
 
     - name: Setup uv
       uses: astral-sh/setup-uv@v7
-    
-    - name: Create venv
-      run: |
-        uv venv .venv
-        echo "$PWD/.venv/bin" >> $GITHUB_PATH
+      with:
+        enable-cache: true
 
     - name: Install dependencies
       working-directory: Liger-Kernel
@@ -116,11 +113,8 @@ jobs:
 
     - name: Setup uv
       uses: astral-sh/setup-uv@v7
-    
-    - name: Create venv
-      run: |
-        uv venv .venv
-        echo "$PWD/.venv/bin" >> $GITHUB_PATH
+      with:
+        enable-cache: true
 
     - name: Install torch_npu and triton-ascend
       shell: bash
