--- a/.github/workflows/liger_kernel.yml
+++ b/.github/workflows/liger_kernel.yml
@@ -51,16 +51,8 @@ jobs:
 
     - name: Setup uv
       uses: astral-sh/setup-uv@v7
-
-    - name: Create venv
-      run: |
-        uv venv .venv
-        echo "$PWD/.venv/bin" >> $GITHUB_PATH
-
-    - name: Create venv
-      run: |
-        uv venv .venv
-        echo "$PWD/.venv/bin" >> $GITHUB_PATH
+      with:
+        activate-environment: true
 
     - name: Install dependencies
       working-directory: Liger-Kernel
@@ -122,16 +114,8 @@ jobs:
 
     - name: Setup uv
       uses: astral-sh/setup-uv@v7
-
-    - name: Create venv
-      run: |
-        uv venv .venv
-        echo "$PWD/.venv/bin" >> $GITHUB_PATH
-
-    - name: Create venv
-      run: |
-        uv venv .venv
-        echo "$PWD/.venv/bin" >> $GITHUB_PATH
+      with:
+        activate-environment: true
 
     - name: Install torch_npu and triton-ascend
       shell: bash
