--- a/.github/workflows/liger_kernel.yml
+++ b/.github/workflows/liger_kernel.yml
@@ -118,21 +118,21 @@ jobs:
       with:
         activate-environment: true
 
+    - name: Install torch_npu and triton-ascend
+      shell: bash
+      run: |
+        uv pip install attrs==24.2.0 numpy==1.26.4 scipy==1.13.1 decorator==5.1.1 psutil==6.0.0 pytest==9.0.2 pytest-xdist==3.6.1 pyyaml pybind11
+        pip install torch==2.7.1 torchvision==0.22.1 torchaudio==2.7.1 --index-url https://download.pytorch.org/whl/cpu
+        uv pip install torch_npu==2.7.1
+        uv pip install triton-ascend==3.2.0rc4
+        python3 -c "import torch; import torch_npu; print(torch_npu.npu.is_available())"
+        python -c "import torch_npu; print('torch_npu version:', torch_npu.__version__)"
+
     - name: Setup Dependencies
       working-directory: Liger-Kernel
       shell: bash
       run: |
         uv pip install -e .[dev]
-
-    - name: Install torch_npu and triton-ascend
-      shell: bash
-      run: |
-        uv pip install attrs==24.2.0 numpy==1.26.4 scipy==1.13.1 decorator==5.1.1 psutil==6.0.0 pytest==9.0.2 pytest-xdist==3.6.1 pyyaml pybind11
-        uv pip install torch==2.6.0 torchvision==0.21.0 torchaudio==2.6.0 --index-url https://download.pytorch.org/whl/cpu
-        uv pip install torch_npu==2.6.0
-        uv pip install triton-ascend==3.2.0rc4
-        python3 -c "import torch; import torch_npu; print(torch_npu.npu.is_available())"
-        python -c "import torch_npu; print('torch_npu version:', torch_npu.__version__)"
 
     - name: List Python Environments
       shell: bash
