--- a/.github/workflows/liger_kernel.yml
+++ b/.github/workflows/liger_kernel.yml
@@ -80,7 +80,7 @@ jobs:
                 --cov-report=term-missing
                 --ignore=test/convergence
                 --disable-warnings
-                --ignore=test/transformers/test_fused_neighborhood_attention.py
+                --ignore-glob='*test_fused_neighborhood_attention.py'
           - name: full
             command: make test
     container:
